<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/idCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="8dp"
        app:contentPadding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView_Localidad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/teal_700"
                        android:src="@drawable/home_work_48px" />
                    <TextView
                        android:id="@+id/textView_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diaryFragment_cardview_city"
                        android:textColor="@color/blue_night2"
                        tools:text="@string/diaryFragment_cardview_city"
                        android:textSize="22sp"
                        android:layout_marginLeft="10dp"
                        android:layout_toEndOf="@id/imageView_Localidad"
                        />
                    <TextView
                        android:id="@+id/textView_Localidad_descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/diaryFragment_cardview_descripcion"
                        android:textSize="16sp"
                        android:layout_toEndOf="@id/imageView_Localidad"
                        android:layout_below="@id/textView_name"
                        android:layout_marginLeft="10dp"
                        />
                    </RelativeLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/chBxDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/sl_chbx_detalle"
                android:buttonTint="@color/blue_night2"
                android:text="@string/Detalle"
                android:textColor="@color/orange"
                android:checked="false"
                android:textSize="16sp"
                android:layout_gravity="end"
                android:contentDescription="@string/diaryFragment_cardview_detail_button"
                />


            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Id"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/textView_localidad_id"
                            android:layout_width="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_height="wrap_content"
                            android:text="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/textView_localidad_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/nombre" />

                    </LinearLayout>

                    <!-- Row -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/estado"
                                android:textColor="@color/black"/>

                            <TextView
                                android:id="@+id/textView_localidad_estado"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/estado" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="64dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pais"
                                android:textColor="@color/black"/>

                            <TextView
                                android:id="@+id/textView_localidad_pais"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pais" />
                        </LinearLayout>
                    </LinearLayout>


                    <!-- Row -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Latitud"
                                android:textColor="@color/black"/>

                            <TextView
                                android:id="@+id/textView_localidad_latitud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Latitud" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="64dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Longitud"
                                android:textColor="@color/black"/>

                            <TextView
                                android:id="@+id/textView_localidad_longitud"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Longitud" />
                        </LinearLayout>
                    </LinearLayout>



                </LinearLayout>



                <androidx.constraintlayout.widget.Group
                    android:id="@+id/card_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="linearLayout"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
</com.google.android.material.card.MaterialCardView>


</FrameLayout>