<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.activities.AddLocationsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_header_height"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_tool_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_sunny"
            app:statusBarScrim="#80000000"
            app:expandedTitleGravity="center"
            app:expandedTitleTextColor="@color/white"
            app:collapsedTitleTextColor="#A0FFFFFF"
            app:collapsedTitleGravity="top"
            app:titleCollapseMode="scale"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <ImageView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playa_cielo_azul"
                android:fitsSystemWindows="true"
                android:scaleType="center"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/backgroud_collampsing_tb_main_activity"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.2"
                android:background="@android:color/black"
                android:fitsSystemWindows="true"/>

            <ImageView
                android:id="@+id/ivUsuari"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/home_work_48px"
                app:tint="#FFFFFF"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:id="@+id/addLicationFragment_textView_title"
                android:layout_width="match_parent"
                android:background="#80000000"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/add_localidad_agregar_text1"
                android:textColor="#80FFFFFF"
                android:textSize="18sp"
                app:layout_collapseMode="pin"
                android:layout_centerInParent="true"
                android:layout_gravity="bottom"
                />


            <!--    android:layout_height="?attr/actionBarSize" -->
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_back_to_main"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="top"
                app:navigationIcon="@drawable/ic_menu_back_arrow"
                app:layout_collapseMode="pin" />



            <!--
               <ImageView
                   android:layout_width="80dp"
                   android:layout_height="80dp"
                   android:src="@drawable/circulo_naranja"
                   android:layout_gravity="center"
                   android:scaleType="fitCenter"
                   app:layout_collapseMode="pin" />

               <ImageView
                   android:id="@+id/ivCloud"
                   android:layout_width="100dp"
                   android:layout_height="60dp"
                   android:src="@drawable/ic_cloud"
                   android:layout_gravity="center"
                   android:scaleType="fitXY"
                   app:layout_collapseMode="parallax"

                   />

        -->

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="10dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addLicationFragment_btnEliminar2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange_100"
                android:src="@drawable/ic_delete_outline_24"
                android:visibility="gone"
                tools:visibility="visible"
                android:tint="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:elevation="10dp"

                />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/ext_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/activity_add_location_fav_desc"
                    android:text="@string/activity_add_location_fav_text"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/orange_100"
                    app:icon="@drawable/ic_search_24"
                    app:iconTint="@null" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addLicationFragment_BtnAgregar2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_3"
                android:src="@drawable/ic_save_24"
                android:layout_marginEnd="10dp"
                android:tint="@color/white"
                android:layout_alignParentEnd="true"
                android:elevation="10dp"

                />
            </RelativeLayout>



            <!-- Campo oculto para guardar el ID de la localidad-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutLocalidadName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/textInputOutlinedStyle"
                app:boxStrokeColor="@color/blue_sky"
                app:endIconMode="clear_text"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                android:hint="@string/add_location_name"
                app:hintTextColor="@color/orange"
                android:layout_margin="10dp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ediTextLocalidadName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/blue_night2"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutLocalidadDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/textInputOutlinedStyle"
                app:boxStrokeColor="@color/blue_sky"
                app:endIconMode="clear_text"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                android:hint="@string/add_location_description"
                app:hintTextColor="@color/orange"
                android:layout_margin="10dp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLocalidadDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/blue_night2"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutLocalidadEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/textInputOutlinedStyle"
                app:boxStrokeColor="@color/blue_sky"
                app:endIconMode="clear_text"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                android:hint="@string/add_location_Estado"
                app:hintTextColor="@color/orange"
                android:layout_margin="10dp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ediTextLocalidadEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/blue_night2"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutLocalidadPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/textInputOutlinedStyle"
                app:boxStrokeColor="@color/blue_sky"
                app:endIconMode="clear_text"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                android:hint="@string/add_location_pais"
                app:hintTextColor="@color/orange"
                android:layout_margin="10dp" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ediTextLocalidadPais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/blue_night2"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutLocalidadLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/textInputOutlinedStyle"
                app:boxStrokeColor="@color/blue_sky"
                app:endIconMode="clear_text"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                android:hint="@string/add_location_Lat"
                app:hintTextColor="@color/orange"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ediTextLocalidadLat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/blue_night2"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiLayoutLocalidadLon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/textInputOutlinedStyle"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/blue_sky"
                app:endIconMode="clear_text"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                android:hint="@string/add_location_Lon"
                app:hintTextColor="@color/orange"
                android:layout_margin="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ediTextLocalidadLon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textColor="@color/blue_night2"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addLicationFragment_btnEliminar"
                    android:layout_width="130dp"
                    android:layout_height="56dp"
                    android:focusable="true"
                    android:text="@string/add_localidad_eliminar"
                    android:visibility="gone"
                    tools:visibility="visible"
                    app:cornerRadius="20dp"
                    app:rippleColor="@color/teal_700"
                    android:backgroundTint="@color/orange_100"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/addLicationFragment_BtnAgregar"

                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addLicationFragment_BtnAgregar"
                    android:layout_width="130dp"
                    android:layout_height="56dp"
                    android:focusable="true"
                    android:text="@string/add_localidad_agregar"
                    android:layout_gravity="right"
                    app:cornerRadius="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/addLicationFragment_btnEliminar"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="310dp"
                />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>